--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header class="sticky top-0 bg-[#121212]/80 backdrop-blur-md z-50 border-b border-gray-800 shadow-sm">
     <div class="flex justify-between items-center py-2 px-6 max-w-7xl mx-auto">
       <div class="flex items-center space-x-4">
-        <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-20">
+        <img src="assets/logo-no-text.png" alt="Craytivo Logo" class="w-16">
         <span class="text-xl font-extrabold tracking-wide uppercase">Craytivo</span>
       </div>
       <div class="md:hidden">
@@ -64,7 +64,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="text-center py-24 px-4" id="hero">
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-4" id="hero">
     <h1 class="text-5xl font-extrabold uppercase mb-4" data-aos="fade-up">Start simple. <span class="text-crayYellow">Grow bold.</span></h1>
     <p class="text-lg max-w-xl mx-auto text-gray-300 mb-8 font-medium" data-aos="fade-up" data-aos-delay="100">
       I help business owners turn ideas into bold, high-performing websites with modern design and clear function.
@@ -75,7 +75,7 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="py-24 px-6 max-w-5xl mx-auto" data-aos="fade-up">
+  <section id="about" class="min-h-screen flex flex-col justify-center px-6 max-w-5xl mx-auto" data-aos="fade-up">
     <h2 class="text-3xl font-bold mb-6 text-crayYellow">About</h2>
     <p class="text-gray-300">
       Craytivo is a solo web studio focused on clear, conversion-driven design. I create fast, modern websites that connect with your audience and grow with your business. Whether you're launching a new brand or scaling an existing one, I build what you need.
