--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="min-h-screen flex flex-col justify-center px-6 max-w-5xl mx-auto" data-aos="fade-up">
+  <section id="about" class="py-24 px-6 max-w-5xl mx-auto" data-aos="fade-up">
     <h2 class="text-3xl font-bold mb-6 text-crayYellow">About</h2>
     <p class="text-gray-300">
       Craytivo is a solo web studio focused on clear, conversion-driven design. I create fast, modern websites that connect with your audience and grow with your business. Whether you're launching a new brand or scaling an existing one, I build what you need.
@@ -114,6 +114,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- Pricing -->
 <section id="pricing" class="py-24 px-6" data-aos="fade-up">
