--- a/index.html
+++ b/index.html
@@ -178,12 +178,13 @@
   <div class="max-w-2xl mx-auto text-center">
     <h2 class="text-3xl font-bold text-crayYellow mb-6">Contact</h2>
     <p class="text-gray-300 mb-8">Have a project in mind or questions about working together? Send a message below.</p>
-    <form class="space-y-4">
-      <input type="text" placeholder="Your Name" class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 text-white" required>
-      <input type="email" placeholder="Your Email" class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 text-white" required>
-      <textarea rows="5" placeholder="Your Message" class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 text-white" required></textarea>
-      <button type="submit" class="bg-crayTeal text-black font-semibold px-6 py-3 rounded hover:bg-opacity-80 transition">Send Message</button>
-    </form>
+    <form name="contact" method="POST" data-netlify="true">
+  <input type="hidden" name="form-name" value="contact" />
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <textarea name="message" placeholder="Your Message" required></textarea>
+  <button type="submit">Send</button>
+</form>
   </div>
 </section>
 
