--- a/index.html
+++ b/index.html
@@ -178,15 +178,43 @@
   <div class="max-w-2xl mx-auto text-center">
     <h2 class="text-3xl font-bold text-crayYellow mb-6">Contact</h2>
     <p class="text-gray-300 mb-8">Have a project in mind or questions about working together? Send a message below.</p>
-    <form name="contact" method="POST" data-netlify="true">
-  <input type="hidden" name="form-name" value="contact" />
-  <input type="text" name="name" placeholder="Your Name" required>
-  <input type="email" name="email" placeholder="Your Email" required>
-  <textarea name="message" placeholder="Your Message" required></textarea>
-  <button type="submit">Send</button>
-</form>
+
+    <form name="contact" method="POST" data-netlify="true" class="space-y-4 text-left" netlify-honeypot="bot-field">
+      <input type="hidden" name="form-name" value="contact" />
+      <input type="hidden" name="bot-field" />
+
+      <!-- Name Field -->
+      <div>
+        <label for="name" class="text-sm font-medium text-gray-300 block mb-1">Name</label>
+        <input type="text" id="name" name="name" required
+          class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 focus:border-crayTeal focus:ring-1 focus:ring-crayTeal text-white transition" />
+      </div>
+
+      <!-- Email Field -->
+      <div>
+        <label for="email" class="text-sm font-medium text-gray-300 block mb-1">Email</label>
+        <input type="email" id="email" name="email" required
+          class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 focus:border-crayTeal focus:ring-1 focus:ring-crayTeal text-white transition" />
+      </div>
+
+      <!-- Message Field -->
+      <div>
+        <label for="message" class="text-sm font-medium text-gray-300 block mb-1">Message</label>
+        <textarea id="message" name="message" rows="5" required
+          class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 focus:border-crayTeal focus:ring-1 focus:ring-crayTeal text-white transition resize-none"></textarea>
+      </div>
+
+      <!-- Submit Button -->
+      <div class="text-center pt-4">
+        <button type="submit"
+          class="bg-crayTeal text-black font-semibold px-6 py-3 rounded hover:bg-opacity-80 transition-all">
+          Send Message
+        </button>
+      </div>
+    </form>
   </div>
 </section>
+
 
 <!-- Footer -->
 <footer class="bg-[#121212] border-t border-gray-700 py-6 text-center text-gray-500 text-sm">
