--- a/index.html
+++ b/index.html
@@ -179,37 +179,25 @@
     <h2 class="text-3xl font-bold text-crayYellow mb-6">Contact</h2>
     <p class="text-gray-300 mb-8">Have a project in mind or questions about working together? Send a message below.</p>
 
-    <form name="contact" method="POST" data-netlify="true" class="space-y-4 text-left" netlify-honeypot="bot-field">
-      <input type="hidden" name="form-name" value="contact" />
-      <input type="hidden" name="bot-field" />
+    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="space-y-4" id="contact-form">
+      <input type="hidden" name="form-name" value="contact">
+      <p class="hidden">
+        <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+      </p>
 
-      <!-- Name Field -->
-      <div>
-        <label for="name" class="text-sm font-medium text-gray-300 block mb-1">Name</label>
-        <input type="text" id="name" name="name" required
-          class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 focus:border-crayTeal focus:ring-1 focus:ring-crayTeal text-white transition" />
-      </div>
+      <label class="block text-left text-sm text-gray-400" for="name">Name</label>
+      <input type="text" id="name" name="name" placeholder="e.g. Jane Doe" required aria-required="true" aria-label="Your name" class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 text-white focus:outline-none focus:ring-2 focus:ring-crayTeal focus:border-crayTeal">
 
-      <!-- Email Field -->
-      <div>
-        <label for="email" class="text-sm font-medium text-gray-300 block mb-1">Email</label>
-        <input type="email" id="email" name="email" required
-          class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 focus:border-crayTeal focus:ring-1 focus:ring-crayTeal text-white transition" />
-      </div>
+      <label class="block text-left text-sm text-gray-400" for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="e.g. you@email.com" required aria-required="true" aria-label="Your email" class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 text-white focus:outline-none focus:ring-2 focus:ring-crayTeal focus:border-crayTeal">
 
-      <!-- Message Field -->
-      <div>
-        <label for="message" class="text-sm font-medium text-gray-300 block mb-1">Message</label>
-        <textarea id="message" name="message" rows="5" required
-          class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 focus:border-crayTeal focus:ring-1 focus:ring-crayTeal text-white transition resize-none"></textarea>
-      </div>
+      <label class="block text-left text-sm text-gray-400" for="message">Message</label>
+      <textarea id="message" name="message" rows="5" placeholder="How can I help you?" required aria-required="true" aria-label="Your message" class="w-full px-4 py-3 rounded bg-[#1e1e1e] border border-gray-600 text-white focus:outline-none focus:ring-2 focus:ring-crayTeal focus:border-crayTeal"></textarea>
 
-      <!-- Submit Button -->
-      <div class="text-center pt-4">
-        <button type="submit"
-          class="bg-crayTeal text-black font-semibold px-6 py-3 rounded hover:bg-opacity-80 transition-all">
-          Send Message
-        </button>
+      <button type="submit" id="submit-button" class="bg-crayTeal text-black font-semibold px-6 py-3 rounded hover:bg-opacity-80 transition">Send Message</button>
+
+      <div id="form-success" class="hidden text-crayTeal font-medium mt-4">
+        ✅ Your message has been sent!
       </div>
     </form>
   </div>
@@ -228,6 +216,11 @@
   toggle.addEventListener('click', () => {
     mobileMenu.classList.toggle('hidden');
   });
+
+  // Success message logic if redirected from Netlify
+  if (window.location.search.includes("success=true")) {
+    document.getElementById('form-success').classList.remove('hidden');
+  }
 </script>
 
 </body>
