Update homepage layout

--- a/index.html
+++ b/index.html
@@ -64,15 +64,23 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="h-[80vh] flex flex-col justify-center items-center text-center px-4 py-6" id="hero">
-    <h1 class="text-5xl font-extrabold uppercase mb-4" data-aos="fade-up">Start simple. <span class="text-crayYellow">Grow bold.</span></h1>
-    <p class="text-lg max-w-xl mx-auto text-gray-300 mb-8 font-medium" data-aos="fade-up" data-aos-delay="100">
+<section class="relative bg-gradient-to-b from-[#121212] to-[#1e1e1e] py-16 px-4 text-center" id="hero">
+  <div class="max-w-xl mx-auto flex flex-col items-center justify-center">
+    <h1 class="text-4xl sm:text-5xl font-extrabold uppercase mb-4 leading-tight" data-aos="fade-up">
+      Start simple. <span class="text-crayYellow">Grow bold.</span>
+    </h1>
+    <p class="text-base sm:text-lg text-gray-300 font-medium mb-6" data-aos="fade-up" data-aos-delay="100">
       I help business owners turn ideas into bold, high-performing websites with modern design and clear function.
     </p>
-    <a href="#contact" class="bg-crayTeal text-black font-semibold py-3 px-6 rounded-full hover:bg-opacity-80 transition" data-aos="zoom-in" data-aos-delay="200">
+    <a href="#contact"
+       class="bg-crayTeal text-black font-semibold py-3 px-6 rounded-full shadow-lg hover:bg-opacity-90 transition duration-300 hover:scale-105"
+       data-aos="zoom-in"
+       data-aos-delay="200">
       Let’s Work Together
     </a>
-  </section>
+  </div>
+</section>
+
 
   <!-- About -->
   <section id="about" class="py-16 px-6 max-w-5xl mx-auto" data-aos="fade-up">
