--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="h-[80vh] bg-gradient-to-b from-[#121212] to-[#1e1e1e] flex flex-col justify-center items-center text-center px-4 py-6" id="hero">
+  <section class="h-[80vh] flex flex-col justify-center items-center text-center px-4 py-6" id="hero">
     <div class="max-w-xl mx-auto">
       <h1 class="text-4xl sm:text-5xl font-extrabold uppercase mb-4 leading-tight" data-aos="fade-up">
         Start simple. <span class="text-crayYellow">Grow bold.</span>
