--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
     };
   </script>
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-    body {
-      opacity: 0;
-      transition: opacity 0.5s ease;
-    }
-  </style>
+  html {
+    scroll-behavior: smooth;
+  }
+  body {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+  }
+  header {
+    transition: padding 0.3s ease;
+  }
+</style>
+
 </head>
 <body class="bg-[#121212] text-white font-sans leading-relaxed tracking-wide">
 
@@ -231,27 +235,41 @@
     <div>&copy; 2025 Craytivo. Built with purpose.</div>
   </footer>
 
-  <!-- Scripts -->
-  <script>
-    AOS.init();
-    window.addEventListener('DOMContentLoaded', () => {
-      document.body.style.opacity = 1;
-    });
+ <!-- Scripts -->
+<script>
+  AOS.init();
 
-    const toggle = document.getElementById('menu-toggle');
-    const mobileMenu = document.getElementById('mobile-menu');
-    toggle.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
+  window.addEventListener('DOMContentLoaded', () => {
+    document.body.style.opacity = 1;
+  });
 
-    // Scroll progress bar
-    window.addEventListener('scroll', () => {
-      const winScroll = document.documentElement.scrollTop;
-      const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-      const scrolled = (winScroll / height) * 100;
-      document.getElementById('progress-bar').style.width = scrolled + "%";
-    });
-  </script>
+  const toggle = document.getElementById('menu-toggle');
+  const mobileMenu = document.getElementById('mobile-menu');
+  toggle.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+  });
+
+  // Scroll progress bar
+  window.addEventListener('scroll', () => {
+    const winScroll = document.documentElement.scrollTop;
+    const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+    const scrolled = (winScroll / height) * 100;
+    document.getElementById('progress-bar').style.width = scrolled + "%";
+
+    // Header shrink effect
+    const header = document.querySelector('header');
+    if (window.scrollY > 50) {
+      header.classList.add('py-1');
+      header.classList.remove('py-2');
+    } else {
+      header.classList.remove('py-1');
+      header.classList.add('py-2');
+    }
+  });
+</script>
+
+
+  
 
 </body>
 </html>
