--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
   header {
     transition: padding 0.3s ease;
   }
+  .animate-spin-slow {
+    animation: spin 60s linear infinite;
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 </style>
 
 </head>
@@ -97,9 +104,11 @@
   <!-- Gradient background -->
   <div class="absolute inset-0 bg-gradient-to-br from-[#1a1a1a] via-[#121212] to-[#0d0d0d] z-0"></div>
 
-  <!-- Top-right animated SVG blob -->
-  <svg class="absolute top-[-80px] right-[-80px] w-96 h-96 opacity-30 animate-pulse z-0" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-    <path fill="#00E0C6" d="M51.3,-65.5C66.3,-54.5,78,-38.6,79.5,-22.1C81.1,-5.5,72.5,11.6,62.7,26.3C52.9,41,42,53.2,28.5,60.5C15,67.8,-1.2,70.1,-17.8,66.5C-34.4,62.8,-51.3,53.1,-59.2,39.6C-67.1,26.1,-65.9,8.9,-64.1,-9.3C-62.2,-27.6,-59.6,-46.8,-48.3,-59.6C-37,-72.4,-18.5,-78.8,-1,-77.5C16.5,-76.2,33,-67.5,51.3,-65.5Z" transform="translate(100 100)" />
+  <!-- Abstract animated SVG blob -->
+  <svg class="absolute top-[-100px] right-[-100px] w-[500px] h-[500px] opacity-25 animate-spin-slow z-0" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+    <g transform="translate(300,300)">
+      <path fill="#00E0C6" d="M154.2,-188.3C194.9,-154.4,217.5,-97.4,212.4,-47.3C207.2,2.8,174.3,46,143.6,80.7C112.9,115.3,84.4,141.4,45.5,160.3C6.7,179.3,-42.5,191.2,-81.3,173.8C-120,156.3,-148.3,109.4,-177.3,57.1C-206.3,4.8,-236,-52.9,-222.1,-96.4C-208.2,-140,-150.7,-169.2,-97.1,-198.6C-43.5,-228,6.2,-257.7,54.4,-253.2C102.6,-248.7,149.4,-209.1,154.2,-188.3Z" />
+    </g>
   </svg>
 
   <!-- Content Card -->
@@ -121,6 +130,7 @@
   <!-- Bottom fade to #121212 -->
   <div class="absolute bottom-0 left-0 w-full h-24 bg-gradient-to-b from-transparent to-[#121212] pointer-events-none z-0"></div>
 </section>
+
 
 
 
